--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "view"
   ],
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "ava": "^4.3.3",
-    "global-jsdom": "^8.5.0",
-    "jsdom": "^20.0.0",
+    "@testing-library/react": "14.0.0",
+    "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "ava": "5.2.0",
+    "global-jsdom": "8.7.0",
+    "jsdom": "21.1.0",
+    "microbundle": "^0.15.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "slate": "0.91.4",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.5"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "slate": "^0.82.1"
   },
   "dependencies": {
-    "slate": "^0.82.1"
+    "nanoid": "3.3.4"
   }
 }
