--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "slate": "0.91.4",
+    "slate-react": "^0.91.8",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "slate": "^0.82.1"
+    "slate": "^0.82.1",
+    "slate-react": "^0.91.8"
   },
   "dependencies": {
     "nanoid": "3.3.4"
