--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "default": "./lib/slate-to-react.mjs"
   },
   "scripts": {
+    "lint:types": "tsc --noEmit",
     "test": "ava",
     "build": "microbundle --jsx React.createElement --jsxFragment React.Fragment",
     "cleanup": "del-cli @types lib"
