--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,8 @@
     "src/**/__helper__/**/*.ts",
     "src/**/__helper__/**/*.tsx",
     "src/**/__macro__/**/*.ts",
-    "src/**/__macro__/**/*.tsx"
+    "src/**/__macro__/**/*.tsx",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx"
   ],
 }
