Enable TS strict mode. Fixes for transforoms. Fixes for tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": "src",
     "target": "esnext",
     "module": "esnext",
-    "strict": false, // TODO: Enable strict mode and fix types
+    "strict": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
