Add eslint and fix eslint errors

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "default": "./lib/slate-to-react.mjs"
   },
   "scripts": {
+    "eslint": "eslint src/**/*.ts src/**/*.tsx",
     "lint:types": "tsc --noEmit",
     "test": "ava",
     "coverage": "c8 npm test",
@@ -34,17 +35,30 @@
     "view"
   ],
   "devDependencies": {
+    "@octetstream/eslint-config": "^6.2.2",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "ava": "5.2.0",
     "c8": "^7.13.0",
     "del-cli": "^5.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-ava": "^14.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "global-jsdom": "8.7.0",
     "husky": "^8.0.3",
     "jsdom": "21.1.0",
+    "lint-staged": "^13.1.2",
     "microbundle": "^0.15.1",
     "pinst": "^3.0.0",
     "react": "18.2.0",
