Fixes for workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,9 @@ on:
     branches: [master]
     paths:
       - "**.ts"
+      - "**.tsx"
       - "tsconfig.json"
-      - "tsconfig.cjs.json"
-      - "tsconfig.esm.json"
-      - "ava.config.cjs"
+      - "ava.config.js"
       - "package.json"
       - "pnpm-lock.yaml"
       - ".github/workflows/ci.yml"
@@ -16,10 +15,9 @@ on:
     branches: [master]
     paths:
       - "**.ts"
+      - "**.tsx"
       - "tsconfig.json"
-      - "tsconfig.cjs.json"
-      - "tsconfig.esm.json"
-      - "ava.config.cjs"
+      - "ava.config.js"
       - "package.json"
       - "pnpm-lock.yaml"
       - ".github/workflows/ci.yml"
