--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -2,7 +2,7 @@ name: ESLint
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
       - "**.ts"
       - "**.tsx"
@@ -12,7 +12,7 @@ on:
       - ".eslintignore"
       - ".github/workflows/eslint.yml"
   pull_request:
-    branches: [master]
+    branches: [main]
     paths:
       - "**.ts"
       - "**.tsx"
