--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "ava": "5.2.0",
@@ -71,8 +70,7 @@
     "slate": "0.91.4",
     "slate-react": "^0.91.8",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "typescript": "4.9.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
