--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,16 @@
 node_modules
 
+/.github
+/.husky
+/coverage
 /src
-/tsconfig.json
+/.c8rc.json
+/.editorconfig
+/.eslintrc.json
+/.eslintignore
+/.lintstagedrc
+/ava.config.js
 /pnpm-lock.yaml
+/tsconfig.json
+/tsconfig.eslint.json
+/tsconfig.build.json
