--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "18.2.0",
     "slate": "0.91.4",
     "slate-react": "^0.91.8",
+    "ts-expect": "^1.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
