--- a/package.json
+++ b/package.json
@@ -42,43 +42,43 @@
     "postpublish": "pinst --enable"
   },
   "devDependencies": {
-    "@octetstream/eslint-config": "^6.2.2",
+    "@octetstream/eslint-config": "6.2.2",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "ava": "5.2.0",
-    "c8": "^7.13.0",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-ava": "^14.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "c8": "7.13.0",
+    "del-cli": "5.0.0",
+    "eslint": "8.35.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-ava": "14.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "global-jsdom": "8.7.0",
-    "husky": "^8.0.3",
+    "husky": "8.0.3",
     "jsdom": "21.1.0",
-    "lint-staged": "^13.1.2",
-    "microbundle": "^0.15.1",
-    "pinst": "^3.0.0",
+    "lint-staged": "13.1.2",
+    "microbundle": "0.15.1",
+    "pinst": "3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "slate": "0.91.4",
-    "slate-react": "^0.91.8",
-    "ts-expect": "^1.3.0",
+    "slate-react": "0.91.8",
+    "ts-expect": "1.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "slate": "^0.82.1",
-    "slate-react": "^0.91.8"
+    "slate": "^0.91.x",
+    "slate-react": "^0.91.x"
   },
   "dependencies": {
     "nanoid": "3.3.4"
