--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,28 +32,37 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: pnpm cache
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-pnpm-store
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node }}-${{ hashFiles('**/.package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node }}-
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
       - name: Setup pnpm
+        id: pnpm-install
         uses: pnpm/action-setup@v2
         with:
-          version: 7.29.0
-          run_install: true
+          version: 7
+          run_install: false
 
-      - run: pnpm run ci
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm i --frozen-cache
+
+      - name: Run CI
+        run: pnpm run ci
 
       - name: Upload codecov report
         uses: codecov/codecov-action@v3
