--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/sinon": "10.0.13",
+    "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
     "ava": "5.2.0",
@@ -69,11 +71,13 @@
     "pinst": "3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sinon": "15.0.1",
     "slate": "0.91.4",
     "slate-react": "0.91.8",
     "ts-expect": "1.3.0",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "9.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
