--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -9,8 +9,7 @@ on:
       - "package.json"
       - "pnpm-lock.yaml"
       - "tsconfig.json"
-      - ".eslintignore"
-      - ".github/workflows/eslint.yml"
+      - ".github/workflows/typescript.yml"
   pull_request:
     branches: [main]
     paths:
@@ -19,11 +18,10 @@ on:
       - "package.json"
       - "pnpm-lock.yaml"
       - "tsconfig.json"
-      - ".eslintignore"
-      - ".github/workflows/eslint.yml"
+      - ".github/workflows/typescript.yml"
 
 jobs:
-  eslint:
+  typescript:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
