--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,43 +9,13 @@
       "typescript": {}
     }
   },
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "plugins": [
-    "@typescript-eslint",
-    "ava"
-  ],
   "extends": [
-    "plugin:ava/recommended",
-    "@octetstream/eslint-config/esm/typescript"
+    "@octetstream/eslint-config/esm/typescript/react"
   ],
   "rules": {
     // These two rules are false-positive and have no solution for TS
     "no-redeclare": 0,
     "no-dupe-class-members": 0,
-    "lines-between-class-members": 0,
-
-    "ava/no-ignored-test-files": ["error", {
-      "files": [
-        "src/**/*.{ts,tsx}"
-      ],
-      "helpers": [
-        "src/**/__macro__/**/*.{ts,tsx}",
-        "src/**/__helper__/**/*.{ts,tsx}",
-        "src/**/__fixture__/**/*.{ts,tsx}"
-      ]
-    }],
-
-    "import/no-extraneous-dependencies": [
-      "error", {
-        "devDependencies": [
-          "src/**/*.test.{ts,tsx}",
-          "src/**/__macro__/**/*.{ts,tsx}",
-          "src/**/__helper__/**/*.{ts,tsx}",
-          "src/**/__fixture__/**/*.{ts,tsx}"
-        ]
-    }]
+    "lines-between-class-members": 0
   }
 }
