--- a/package.json
+++ b/package.json
@@ -88,9 +88,9 @@
     "uuid": "9.0.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "slate": "^0.91.x",
-    "slate-react": "^0.91.x"
+    "react": "18.x",
+    "slate": ">= 0.91.x || <= 0.93.x",
+    "slate-react": ">= 0.91.x || <= 0.93.x"
   },
   "dependencies": {
     "nanoid": "3.3.4"
