--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        node: [14.x, 16.x, 18.x, 19.x]
+        node: [16.x, 18.x, 20.x]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +41,6 @@ jobs:
         id: pnpm-install
         uses: pnpm/action-setup@v2
         with:
-          version: 7
           run_install: false
 
       - name: Get pnpm store directory
