--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     }
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@octetstream/eslint-config": "7.2.1",
     "@testing-library/react": "14.0.0",
     "@types/node": "20.4.1",
