--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "target": "esnext",
-    "module": "esnext",
+    "module": "nodenext",
     "strict": true,
     "noImplicitAny": true,
     "moduleResolution": "nodenext",
