--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": "octet-stream/slate-to-react",
   "sideEffects": false,
-  "packageManager": "pnpm@8.5.1",
+  "packageManager": "pnpm@8.10.2",
   "engines": {
     "node": ">= 16.5"
   },
@@ -92,6 +92,7 @@
     "slate-react": "0.97.1",
     "ts-expect": "1.3.0",
     "ts-node": "10.9.1",
+    "tsup": "^7.2.0",
     "typescript": "5.1.6",
     "uuid": "9.0.0"
   },
