Improve project's setup
* Use tsup to build project;
* Update entry poing for cjs and esm;
* Remove umd support;
* Update npm scripts and husky hooks;
* Disable husky installation, remove pinst and move husky installation to prepare script;
* Set minimal required Node.js version to 18;
* Update ci workflow to use Node 18, 20 and 21;
* Use Node 20 for coverage reports and eslint workflow;
* Remove typescript workflow, because tsup will manage type validation;

--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
 node_modules
 
+/.changeset
 /.github
 /.husky
 /coverage
@@ -15,3 +16,4 @@ node_modules
 /tsconfig.eslint.json
 /tsconfig.build.json
 /tsconfig.ava.json
+/tsup.config.ts
