--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "eslint": "eslint src/**/*.ts src/**/*.tsx",
-    "test": "cross-env NODE_OPTIONS=\"--no-warnings --loader=ts-node/esm\" ava",
+    "test": "NODE_OPTIONS=\"--no-warnings --import tsx\" ava",
     "coverage": "c8 pnpm test",
     "report": "c8 -r=html pnpm test",
     "ci": "c8 pnpm test && c8 report --reporter=json",
@@ -87,8 +87,8 @@
     "slate": "0.94.1",
     "slate-react": "0.97.1",
     "ts-expect": "1.3.0",
-    "ts-node": "10.9.1",
     "tsup": "7.2.0",
+    "tsx": "^4.7.1",
     "typescript": "5.1.6",
     "uuid": "9.0.0"
   },
