--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     }
   },
   "scripts": {
-    "test": "ava",
+    "test": "cross-env NODE_OPTIONS=\"--no-warnings --import tsx\" ava",
     "coverage": "c8 pnpm test",
     "report": "c8 -r=html pnpm test",
     "ci": "c8 pnpm test && c8 report --reporter=json",
@@ -88,7 +88,6 @@
     "slate": "0.94.1",
     "slate-react": "0.97.1",
     "ts-expect": "1.3.0",
-    "tsimp": "2.0.11",
     "tsup": "7.2.0",
     "tsx": "^4.7.1",
     "typescript": "5.1.6",
